--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="remodal remodal-img" data-remodal-id="portrait-modal">
                     <h3>请输入图片URL地址：</h3>
                     <br/>
-                    <input type="text" id="avatar-url">
+                    <input type="text" id="avatar-url" value="//pic.cnblogs.com/face/997181/20160723112109.png">
                     <button data-remodal-action="confirm" class="remodal-confirm">确定</button>
                 </div>
                 <h1 id="username" >ekCit</h1>
