--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
                     <input type="text" id="avatar-url" value="//pic.cnblogs.com/face/997181/20160723112109.png">
                     <button data-remodal-action="confirm" class="remodal-confirm">确定</button>
                 </div>
-                <h1 id="username" >ekCit</h1>
-                <h4 id="persona-tag" >Python / Web / 互联网教育</h4>
+                <h1 id="username" >Maggie</h1>
+                <h4 id="persona-tag" >PHP/JS</h4>
             </div>
             <div class="profile info-unit">
                 <h2 class="info-header"><i class="iconfont">&#xec88;</i> <span class="info-title">基本信息</span></h2>
                 <hr>
                 <ul class="info-list">
                     <li>
-                        <label class="left-label">姓名</label><span class="label-value">XXX</span></li>
+                        <label class="left-label">姓名</label><span class="label-value">廖冬梅</span></li>
                     <li>
-                        <label class="left-label">学历</label><span class="label-value">本科</span></li>
+                        <label class="left-label"></label><span class="label-value"></span></li>
                     <li>
                         <label class="left-label">毕业院校</label><span class="label-value">北京邮电大学</span></li>
                     <li>
@@ -45,13 +45,13 @@
                 <hr>
                 <ul class="info-list">
                     <li>
-                        <label class="left-label">手机</label><span class="label-value">182XXXXXXXX</span></li>
+                        <label class="left-label">手机</label><span class="label-value">14718433286</span></li>
                     <li>
-                        <label class="left-label">邮箱</label><span class="label-value">crmrc2014@gmail.com</span></li>
+                        <label class="left-label">邮箱</label><span class="label-value">6195803682qq.com</span></li>
                     <li>
-                        <label class="left-label">个人主页</label><span class="label-value">exit-tixe.me</span></li>
+                        <label class="left-label">个人主页</label><span class="label-value"></span></li>
                     <li>
-                        <label class="left-label">Github</label><span class="label-value">github.com/ekCit</span></li>
+                        <label class="left-label">Github</label><span class="label-value">https://github.com/juneldmm</span></li>
                 </ul>
             </div>
             <div class="skill info-unit">
@@ -59,7 +59,7 @@
                 <hr>
                 <ul class="progress-list">
                     <li>
-                        <label class="left-label">Python</label>
+                        <label class="left-label">PHP</label>
                         <progress value="80" max="100"></progress>
                     </li>
                     <li>
@@ -70,10 +70,6 @@
                         <label class="left-label">Javascript</label>
                         <progress value="60" max="100"></progress>
                     </li>
-                    <li>
-                        <label class="left-label">机器学习</label>
-                        <progress value="60" max="100"></progress>
-                    </li>
                 </ul>
             </div>
             <div class="stack info-unit">
@@ -81,14 +77,12 @@
                 <hr>
                 <ul class="stack-list">
                     <li>
-                        <label class="left-label">前端</label><span class="label-value">jQuery、Angular.js、React.js</span></li>
+                        <label class="left-label">前端</label><span class="label-value">javascript、jQuery、vue.js</span></li>
                     </li>
                     <li>
-                        <label class="left-label">后端</label><span class="label-value">Flask、Django、Twisted、Node.js、MongoDB、MySQL、Redis</span></li>
+                        <label class="left-label">后端</label><span class="label-value">PHP、MySQL、Memecache</span></li>
                     </li>
-                    <li>
-                        <label class="left-label">其它</label><span class="label-value">我全都是瞎写的。</span></li>
-                    </li>
+                   
                 </ul>
             </div>
 
@@ -96,7 +90,7 @@
                 <h2 class="info-header"><i class="iconfont">&#x3488;</i> <span class="info-title">个人微信</span></h2>
                 <hr>
                 <div class="weixin">
-                    <img src="static/image/weixin.png" alt="">
+                    <img src="http://images.cnblogs.com/cnblogs_com/maggie-php/892449/o_weixin.jpgv" alt="">
 
                 </div>
             </div>
