--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <h2 class="info-header"><i class="iconfont">&#x3488;</i> <span class="info-title">个人微信</span></h2>
                 <hr>
                 <div class="weixin">
-                    <img src="http://images.cnblogs.com/cnblogs_com/maggie-php/892449/o_weixin.jpgv" alt="">
+                    <img src="http://images.cnblogs.com/cnblogs_com/maggie-php/892449/o_weixin.jpg" alt="">
 
                 </div>
             </div>
